CORS setup and cargo fmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ http = "1"
 tower = "0.5"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tower-http = { version = "0.6", features = ["cors"] }
