--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ tower = "0.5"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tower-http = { version = "0.6", features = ["cors"] }
+
+[dev-dependencies]
+tempfile = "3"
+wiremock = "0.6"
