--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ services:
     image: sagarparker/x402-gateway:latest
     network_mode: host
     environment:
-      - CONFIG_PATH=config.docker.json
+      - CONFIG_PATH=/init-params/config.json
+    volumes:
+      - /init-params:/init-params:ro
     restart: unless-stopped
 
   backend:
