--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   x402-gateway:
     image: sagarparker/x402-gateway:latest
     network_mode: host
@@ -8,7 +9,29 @@ services:
       - /init-params:/init-params:ro
     restart: unless-stopped
 
-  backend:
-    image: sagarparker/http-server:latest
+  # Ollama service
+  ollama_server:
+    image: alpine/ollama:0.10.1
+    container_name: ollama_server
+    init: true
     network_mode: host
-    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "ollama --version" ]
+      interval: 10s
+      retries: 3
+
+  # Ollama model run
+  ollama_model:
+    image: alpine/ollama:0.10.1
+    container_name: ollama_model_qwen3
+    command: pull qwen3:0.6b
+    init: true
+    network_mode: host
+    depends_on:
+      ollama_server:
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD-SHELL", "ollama show qwen3:0.6b" ]
+      start_period: 2m30s
+      interval: 30s
+      retries: 3
